Resolve warnings and resource leaks in CachedRefRepositoryTest
Change-Id: Iaab5a292190e0ccdd924198ce1028655cad5c381